# meroshop

./: docker-compose.yaml
backend/: .dockerignore  .env.dist  .gitignore  Dockerfile  pyproject.toml
backend/carts/: models.py  serializers.py  urls.py  views.py
backend/carts/migrations/: 0001_initial.py
backend/config/: pagination.py  settings.py  urls.py
backend/config/settings/: base.py  local.py  logging.py  production.py
backend/products/: admin.py  filters.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_category_created_at_category_updated_at.py  0002_initial.py  0003_alter_product_discount_price_alter_product_price_and_more.py  0004_alter_product_options_review_and_more.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_customuser_role_alter_profile_profile_picture.py
backend/vendors/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/vendors/migrations/: 0001_initial.py  0002_vendor_status.py  0003_alter_vendor_phone_number.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/api/: endpoint.js  userApi.js
frontend/src/components/: Badge.jsx  DashboardNavbar.jsx  DashboardSidebar.jsx  DashboardTableNoDataRow.jsx  DashboardTableSearchForm.jsx  DeleteConfirmModal.jsx  Footer.jsx  Hero.jsx  IconBadge.jsx  Loading.jsx  Navbar.jsx  Pagination.jsx  (+6 more)
(+64 files in other folders)
